--- a/src/style.css
+++ b/src/style.css
@@ -35,43 +35,58 @@
   display: flex;
   align-items: stretch;
   align-content: stretch;
+  background-image: linear-gradient(transparent, rgba(0,0,0,0.32));
   bottom: 0;
   width: 100%;
+  z-index: 10;
+  opacity: 1;
+  transition: opacity 0.23s cubic-bezier(0.4,0,1,1);
 }
 .ivid__choice-wrapper[data-state=hidden] {
-  display: none;
+  opacity: 0;
+  z-index: 0;
 }
 
 .ivid__choice-button {
-  color: white;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: large;
-  font-weight: bold;
+  font-weight: normal;
   border: none;
+  color: white;
+  background-color: transparent;
   width: 100%;
-  height: 7.6em;
-  background-color: rgba(0,0,0,0.28);
+  height: 5.7em;
+  transition: background-color 0.23s cubic-bezier(0.4,0,1,1);
 }
 
 .ivid__choice-button:hover {
-  font-size: larger;
-  background-color: rgba(0,0,0,0.32);
+  background-image: linear-gradient(transparent, rgba(0,0,0,0.47));
 }
 
 
 /*
   CONTROLS
 */
-.ivid__ctrls-wrapper {
-  background-color: transparent;
+.ivid__ctrls {
+  background-image: linear-gradient(transparent, rgba(0,0,0,0.32));
   position: fixed;
   bottom: 0;
-  left: 1.8em;
-  right: 1.8em;
+  left: 0;
+  right: 0;
   opacity: 1;
-  transition: opacity 0.23s cubic-bezier(0.4, 0, 1, 1);
+  z-index: 10;
+  transition: opacity 0.23s cubic-bezier(0.4,0,1,1);
 }
-.ivid__ctrls-wrapper[data-state=hidden] {
+.ivid__ctrls[data-state=hidden] {
   opacity: 0;
+  z-index: 0;
+}
+
+.ivid__ctrls-wrapper {
+  margin: auto;
+  bottom: 0;
+  width: 98%;
 }
 
 
@@ -86,7 +101,8 @@
   cursor: pointer;
   height: 2em;
   width: 100%;
-  
+  left: 1.8em;
+  right: 1.8em;
 }
 
 .ivid__ctrls-progress > progress {
@@ -133,6 +149,8 @@
 .ivid__ctrls-buttons-wrapper {
   display: flex;
   align-items: center;
+  left: 1.8em;
+  right: 1.8em;
   width: 100%;
   margin-bottom: 1.3em;
 }
@@ -160,8 +178,8 @@
   background: white;
   outline: none;
   transition:
-    opacity 0.47s cubic-bezier(0.4, 0, 1, 1),
-    width 0.23s cubic-bezier(0.4, 0, 1, 1);
+    opacity 0.47s cubic-bezier(0.4,0,1,1),
+    width 0.23s cubic-bezier(0.4,0,1,1);
 }
 .ivid__ctrls-volume[data-state=open] {
   opacity: 1;
