--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
   margin: 0; 
   padding: 0; 
   font-size: 10pt; 
+
+}
+*:focus {  
+  outline: none;
 }
 
 .ivid {
@@ -57,13 +61,16 @@
   background-color: transparent;
   width: 100%;
   height: 5.7em;
-  transition: background-color 0.23s cubic-bezier(0.4,0,1,1);
+  transition:
+    font-weight 0.23s cubic-bezier(0.4,0,1,1),
+    background-color 0.23s cubic-bezier(0.4,0,1,1);
 }
 .ivid__choice-button:hover {
-  background-image: linear-gradient(transparent, rgba(0,0,0,0.47));
+  background-image: radial-gradient(rgba(204,204,204,0.47), transparent, transparent);
 }
 .ivid__choice-button[data-state=selected] {
-  background-image: linear-gradient(transparent, rgba(0,0,0,0.47));
+  text-decoration: underline;
+  background-image: radial-gradient(rgba(204,204,204,0.78), transparent, transparent);
 }
 
 
