--- a/src/style.css
+++ b/src/style.css
@@ -59,17 +59,17 @@
   border: none;
   color: white;
   background-color: transparent;
+  background-image: none;
   width: 100%;
   height: 5.7em;
   transition:
     font-weight 0.23s cubic-bezier(0.4,0,1,1),
-    background-color 0.23s cubic-bezier(0.4,0,1,1);
+    background-image 0.23s cubic-bezier(0.4,0,1,1);
 }
 .ivid__choice-button:hover {
   background-image: radial-gradient(rgba(204,204,204,0.47), transparent, transparent);
 }
 .ivid__choice-button[data-state=selected] {
-  text-decoration: underline;
   background-image: radial-gradient(rgba(204,204,204,0.78), transparent, transparent);
 }
 
